fix bug with drop-down menu z-index

--- a/styles/_burger-menu.sass
+++ b/styles/_burger-menu.sass
@@ -9,7 +9,7 @@
     height: 30px
     position: relative
     cursor: pointer
-    
+    z-index: 999
     span
         display: block
         position: absolute
@@ -39,7 +39,7 @@
     position: absolute
     top: 3rem
     right: 2rem
-    
+    z-index: 999
     cursor: pointer
     
     span
@@ -62,6 +62,7 @@
     position: absolute
     background-color: #{$grey}
     top: 0
+    z-index: 999
     @include navList(column, 6vmin, 15px, black)
     color: black
     
